fixed table view export; now can export all columns or selected/visible columns as either csv or excel file

--- a/src/app/visualizationComponents/TableComponent/table-plugin-component.less
+++ b/src/app/visualizationComponents/TableComponent/table-plugin-component.less
@@ -10,7 +10,6 @@
 
 .tool-btn {
     height: 30px;
-    width: 30px !important;
     display: block !important;
 }
 
